--- a/index.html
+++ b/index.html
@@ -17,7 +17,7 @@
             <nav class="list">
                 <ul class="list-title">
                     <li class="list-link">
-                        <img src="./images/Frame (1).png" class="image">
+                        <img src="./images/lokalise1.png" class="image">
                     </li>
                     <li class="list-link">
                         <a href="#" class="list-text">Product</a>
@@ -58,7 +58,7 @@
                     </div>
                     <h3 class="text">Try all features for 14 days · No credit card required</h3>
                 </div>
-                <img src="./images/изображение 1.png" class="pic">
+                <img src="./images/image.png" class="pic">
             </div>
         </div>
     </section>
@@ -71,22 +71,22 @@
             <div class="icon">
                 <ul class="icon-wrap">
                     <li>
-                        <img src="./images/Frame (7).png" class="icon-pic">
+                        <img src="./images/specialized.png" class="icon-pic">
                     </li>
                     <li>
-                        <img src="./images/Frame (2).png" class="icon-pic">
+                        <img src="./images/virgin.png" class="icon-pic">
                     </li>
                     <li>
-                        <img src="./images/Frame (3).png" class="icon-pic">
+                        <img src="./images/tidal.png" class="icon-pic">
                     </li>
                     <li>
-                        <img src="./images/Frame (4).png" class="icon-pic">
+                        <img src="./images/revolut.png" class="icon-pic">
                     </li>
                     <li>
-                        <img src="./images/Frame (5).png" class="icon-pic">
+                        <img src="./images/yelp.png" class="icon-pic">
                     </li>
                     <li>
-                        <img src="./images/Frame (6).png" class="icon-pic">
+                        <img src="./images/daimler.png" class="icon-pic">
                     </li>
                 </ul>
             </div>
@@ -103,10 +103,8 @@
                     </p>
                     <a href="#" class="title-list">Start now</a>
                 </div>
-                <img src="./images/1111 1.png" class="title-pic">
+                <img src="./images/project.png" class="title-pic">
             </div>
-        </div>
-        <div class="container">
             <div class="wrapper-small">
                 <div class="wrapper-first item">
                     <h5 class="title-caption">Shorten time to market </h5>
@@ -116,10 +114,8 @@
                     </p>
                     <a href="#" class="title-list">Start now</a>
                 </div>
-                <img src="./images/2222 1.png" class="title-pic-left">
+                <img src="./images/icon.png" class="title-pic-left">
             </div>
-        </div>
-        <div class="container">
             <div class="wrapper">
                 <div class="wrapper-first">
                     <h5 class="title-caption">Ensure quality </h5>
@@ -129,29 +125,27 @@
                     </p>
                     <a href="#" class="title-list">Start now</a>
                 </div>
-                <img src="./images/3333 1.png" class="title-pic bottom">
+                <img src="./images/translation.png" class="title-pic bottom">
             </div>
+            <div class="wrapper-small">
+                <div class="wrapper-first item">
+                    <h5 class="title-caption">Less work for developers </h5>
+                    <p class="title-item">Eliminate the hassle of localization and let developers get back to their
+                        main tasks. Save hours with the powerful API, CLI, mobile SDKs, and integrations with
+                        GitHub, Bitbucket, JIRA, and more.
+                    </p>
+                    <a href="#" class="title-list">Start now</a>
+                </div>
+                <img src="./images/developers.png" class="title-pic-left last">
+            </div>
+        </div>
+        <section class="color">
             <div class="container">
-                <div class="wrapper-small">
-                    <div class="wrapper-first item">
-                        <h5 class="title-caption">Less work for developers </h5>
-                        <p class="title-item">Eliminate the hassle of localization and let developers get back to their
-                            main tasks. Save hours with the powerful API, CLI, mobile SDKs, and integrations with
-                            GitHub, Bitbucket, JIRA, and more.
-                        </p>
-                        <a href="#" class="title-list">Start now</a>
-                    </div>
-                    <img src="./images/Frame (9).png" class="title-pic-left last">
-                </div>
-            </div>
-            <section class="color">
-                <div class="container">
-                    <h6 class="tagline"> What can you localize with Lokalise?</h6>
-                </div>
+                <h6 class="tagline"> What can you localize with Lokalise?</h6>
                 <div class="wrap-item">
                     <div class="item">
                         <div class="wrap-img">
-                            <img src="./images/Rectangle (3).png" class="item-img">
+                            <img src="./images/webapps.png" class="item-img">
                         </div>
                         <h5 class="item-text">Web apps</h5>
                         <p class="item-list">Any kind of web apps — backend, frontend, single page, blogs — you name it.
@@ -159,7 +153,7 @@
                     </div>
                     <div class="item">
                         <div class="wrap-img">
-                            <img src="./images/Rectangle (4).png" class="item-img">
+                            <img src="./images/mobileapps.png" class="item-img">
                         </div>
                         <h5 class="item-text">Mobile apps</h5>
                         <p class="item-list">Upload any mobile platform language files. Embed Lokalise iOS SDK or
@@ -167,7 +161,7 @@
                     </div>
                     <div class="item">
                         <div class="wrap-img">
-                            <img src="./images/Rectangle (5).png" class="item-img">
+                            <img src="./images/games.png" class="item-img">
                         </div>
                         <h5 class="item-text">Games</h5>
                         <p class="item-list">Our cloud software is trusted by many leading game developers around the
@@ -176,7 +170,7 @@
                     </div>
                     <div class="item">
                         <div class="wrap-img">
-                            <img src="./images/Rectangle (6).png" class="item-img">
+                            <img src="./images/documents.png" class="item-img">
                         </div>
                         <h5 class="item-text">Documents</h5>
                         <p class="item-list">Upload your DOCX and static HTML files.
@@ -184,7 +178,7 @@
                     </div>
                     <div class="item">
                         <div class="wrap-img">
-                            <img src="./images/Rectangle (7).png" class="item-img">
+                            <img src="./images/emails.png" class="item-img">
                         </div>
                         <h5 class="item-text">Marketing e-mails</h5>
                         <p class="item-list">Integrate with Salesforce Marketing Cloud (coming soon) or translate static
@@ -193,54 +187,46 @@
                     </div>
                     <div class="item last">
                         <div class="wrap-img">
-                            <img src="./images/Rectangle (8).png" class="item-img">
+                            <img src="./images/iot.png" class="item-img">
                         </div>
                         <h5 class="item-text">IoT</h5>
                         <p class="item-list">We support most popular localization file formats.
                         </p>
                     </div>
                 </div>
-            </section>
-
-            <div class="container">
-                <div class="inner">
-                    <h1 class="desc-text">Boost your localization team’s productivity tenfold </h1>
+            </div>
+        </section>
+        <div class="container">
+            <h1 class="desc-text">Boost your localization team’s productivity tenfold </h1>
+            <div class="wrapper-card">
+                <div class="card-wrap">
+                    <img src="./images/managers.png" class="card-image first">
+                    <h3 class="card-title">Managers </h3>
+                    <p class="card-text">Update existing and launch new features and products while simultaneously
+                        localizing them in multiple languages. Streamline your team's workflow, maximize
+                        productivity,
+                        and speed up expansion to other markets.</p>
+                    <a href="#" class="card-link">Learn more</a>
                 </div>
-                <div class="wrapper-card">
-                    <div class="card-wrap">
-                        <div class="card-wrapper">
-                            <img src="./images/Rectangle (9).png" class="card-image first">
-                        </div>
-                        <h3 class="card-title">Managers </h3>
-                        <p class="card-text">Update existing and launch new features and products while simultaneously
-                            localizing them in multiple languages. Streamline your team's workflow, maximize
-                            productivity,
-                            and speed up expansion to other markets.</p>
-                        <a href="#" class="card-link">Learn more</a>
-                    </div>
-                    <div class="card-wrap">
-                        <div class="card-wrapper">
-                            <img src="./images/Rectangle (10).png" class="card-image second">
-                        </div>
-                        <h3 class="card-title">Developers </h3>
-                        <p class="card-text">Set up an integration with your code repository or your own custom SDK via
-                            Lokalise's powerful API. Do that once, and every time you make changes in the code, they'll
-                            be automatically imported to Lokalise for translation.</p>
-                        <a href="#" class="card-link">Learn more</a>
-                    </div>
-                    <div class="card-wrap">
-                        <div class="card-wrapper">
-                            <img src="./images/Rectangle (11).png" class="card-image third">
-                        </div>
-                        <h3 class="card-title">Translators </h3>
-                        <p class="card-text">Eliminate double-work and neverending revisions with visual context
-                            (screenshots) and live previews. Improve the quality and speed of your translations with
-                            built-in CAT tools, like autocomplete, inline machine translation, and translation memory.
-                        </p>
-                        <a href="#" class="card-link">Learn more</a>
-                    </div>
+                <div class="card-wrap">
+                    <img src="./images/developers2.png" class="card-image second">
+                    <h3 class="card-title">Developers </h3>
+                    <p class="card-text">Set up an integration with your code repository or your own custom SDK via
+                        Lokalise's powerful API. Do that once, and every time you make changes in the code, they'll
+                        be automatically imported to Lokalise for translation.</p>
+                    <a href="#" class="card-link">Learn more</a>
+                </div>
+                <div class="card-wrap">
+                    <img src="./images/translators.png" class="card-image third">
+                    <h3 class="card-title">Translators </h3>
+                    <p class="card-text">Eliminate double-work and neverending revisions with visual context
+                        (screenshots) and live previews. Improve the quality and speed of your translations with
+                        built-in CAT tools, like autocomplete, inline machine translation, and translation memory.
+                    </p>
+                    <a href="#" class="card-link">Learn more</a>
                 </div>
             </div>
+        </div>
     </main>
     <section class="info">
         <div class="container">
@@ -253,20 +239,21 @@
                         been a
                         lifesaver, and over-the-air updates are the icing on the cake.”</p>
                     <p class="info-text">Edward Cooper, Chief Mobile Officer</p>
-                    <img src="./images/Frame (11).png" class="info-img">
+                    <img src="./images/revo.png" class="info-img">
                 </div>
-                <img src="./images/Rectangle (12).png" class="info-photo">
+                <img src="./images/photo.png" class="info-photo">
             </div>
+        </div>
     </section>
 
     <div class="more">
         <div class="container">
             <div class="box">
-                <img src="./images/image 1.png" class="image-cake">
+                <img src="./images/cake.png" class="image-cake">
                 <h3 class="text-info"> The most-loved translation management software</h3>
-                <img src="./images/15.png" class="pic-15">
-                <img src="./images/Frame (13).png" class="pic-info">
-                <img src="./images/Frame (14).png" class="pic-info second">
+                <img src="./images/border.png" class="pic-15">
+                <img src="./images/love.png" class="pic-info">
+                <img src="./images/capterra.png" class="pic-info second">
             </div>
         </div>
     </div>
@@ -275,7 +262,7 @@
             <div class="holder">
                 <h2 class="excerpt">Integrate Lokalise with your work tools</h2>
                 <p class="excerpt-text">Automate processes, eliminate routine tasks, and track progress with ease.</p>
-                <img src="./images/изображение 2.png" class="excerpt-img">
+                <img src="./images/bird.png" class="excerpt-img">
                 <button class="btn-excerpt">See all integrations</button>
             </div>
         </div>
@@ -297,8 +284,8 @@
             <div class="wrap-items">
                 <div class="items-photo">
                     <h4 class="slogan-items">Case Studies</h4>
-                    <img src="./images/16.png" class="img-items">
-                    <img src="./images/17.png" class="pic-items">
+                    <img src="./images/bicycle.png" class="img-items">
+                    <img src="./images/specc.png" class="pic-items">
                     <p class="text-items">Riding towards global success with a 100% teammate enthusiasm</p>
                     <a href="#" class="slogan-items-small">Read more</a>
                 </div>
@@ -419,14 +406,13 @@
                         </p>
                     </div>
                     <div class="cart-box">
-                        <img src="./images/©2001-2020.png" class="cart-box-img">
+                        <img src="./images/2020.png" class="cart-box-img">
                         <p class="cart-box-text">All rights reserved.</p>
                     </div>
                 </div>
             </div>
         </div>
     </footer>
-    <div class="basket-color"></div>
 </body>
 
 </html>
