--- a/index.html
+++ b/index.html
@@ -15,10 +15,8 @@
     <header class="navigation">
         <div class="container">
             <nav class="list">
+                <img src="./images/lokalise1.png" class="image">
                 <ul class="list-title">
-                    <li class="list-link">
-                        <img src="./images/lokalise1.png" class="image">
-                    </li>
                     <li class="list-link">
                         <a href="#" class="list-text">Product</a>
                     </li>
@@ -34,13 +32,11 @@
                     <li class="list-link">
                         <a href="#" class="list-text">Resources</a>
                     </li>
-                    <li class="list-link-control-first">
-                        <button class="btn">Log in</button>
-                    </li>
-                    <li class="list-link-control">
-                        <button class="btn-second">Try it free</button>
-                    </li>
                 </ul>
+                <div class="wrap-btn">
+                    <button class="btn">Log in</button>
+                    <button class="btn-second">Try it free</button>
+                </div>
             </nav>
         </div>
     </header>
@@ -289,110 +285,110 @@
                     <p class="text-items">Riding towards global success with a 100% teammate enthusiasm</p>
                     <a href="#" class="slogan-items-small">Read more</a>
                 </div>
-                <ul class="list-copyright">
-                    <li class="list-copy">
-                        <h3 class="link-card-title">Product</h3>
-                    </li>
-                    <li class="list-copy">
-                        <a href="#" class="link-card">For developers</a>
-                    </li>
-                    <li class="list-copy">
-                        <a href="#" class="link-card">For managers</a>
-                    </li>
-                    <li class="list-copy">
-                        <a href="#" class="link-card">For translators</a>
-                    </li>
-                    <li class="list-copy">
-                        <a href="#" class="link-card">For designers</a>
-                    </li>
-                    <li class="list-copy">
-                        <a href="#" class="link-card">Integrations</a>
-                    </li>
-                    <li class="list-copy">
-                        <a href="#" class="link-card">Security</a>
-                    </li>
-                    <li class="list-copy">
-                        <a href="#" class="link-card">Pricing</a>
-                    </li>
-                    <li class="list-copy">
-                        <a href="#" class="link-card">Automations</a>
-                    </li>
-                </ul>
-                <ul class="list-copyright">
-                    <li class="list-copy">
-                        <h3 class="link-card-title">Support</h3>
-                    </li>
-                    <li class="list-copy">
-                        <a href="#" class="link-card">Contact</a>
-                    </li>
-                    <li class="list-copy">
-                        <a href="#" class="link-card">Documentation</a>
-                    </li>
-                    <li class="list-copy">
-                        <a href="#" class="link-card">Status</a>
-                    </li>
-                    <li class="list-copy">
-                        <a href="#" class="link-card">Product Updates</a>
-                    </li>
-                    <li class="list-copy">
-                        <a href="#" class="link-card">CLI Tool</a>
-                    </li>
-                    <li class="list-copy">
-                        <a href="#" class="link-card">API Reference</a>
-                    </li>
-                    <li class="list-copy">
-                        <a href="#" class="link-card">iOS and Android SDK</a>
-                    </li>
-                    <li class="list-copy">
-                        <a href="#" class="link-card">Supported File Formats</a>
-                    </li>
-                </ul>
-                <ul class="list-copyright">
-                    <li class="list-copy">
-                        <h3 class="link-card-title">Company</h3>
-                    </li>
-                    <li class="list-copy">
-                        <a href="#" class="link-card">About</a>
-                    </li>
-                    <li class="list-copy">
-                        <a href="#" class="link-card">Blog</a>
-                    </li>
-                    <li class="list-copy">
-                        <a href="#" class="link-card">Careers | We`re Hiring</a>
-                    </li>
-                    <li class="list-copy">
-                        <a href="#" class="link-card">Case Studies</a>
-                    </li>
-                    <li class="list-copy">
-                        <a href="#" class="link-card">Media Kit</a>
-                    </li>
-                </ul>
-                <ul class="list-copyright">
-                    <li class="list-copy">
-                        <h3 class="link-card-title">Legal</h3>
-                    </li>
-                    <li class="list-copy">
-                        <a href="#" class="link-card">Terms of Service</a>
-                    </li>
-                    <li class="list-copy">
-                        <a href="#" class="link-card">Privacy Policy</a>
-                    </li>
-                    <li class="list-copy">
-                        <a href="#" class="link-card">Cookie Policy</a>
-                    </li>
-                    <li class="list-copy">
-                        <a href="#" class="link-card">Privacy Shield</a>
-                    </li>
-                    <li class="list-copy">
-                        <a href="#" class="link-card">DPA</a>
-                    </li>
-                    <li class="list-copy">
-                        <a href="#" class="link-card">List of Sub-processors</a>
-                    </li>
-                    <li class="list-copy">
-                        <a href="#" class="link-card box">Candidates Privacy Notice</a>
-                    </li>
-                </ul>
+                <div class="wrap-copyright">
+                    <h3 class="link-card-title">Product</h3>
+                    <ul class="list-copyright">
+                        <li class="list-copy">
+                            <a href="#" class="link-card">For developers</a>
+                        </li>
+                        <li class="list-copy">
+                            <a href="#" class="link-card">For managers</a>
+                        </li>
+                        <li class="list-copy">
+                            <a href="#" class="link-card">For translators</a>
+                        </li>
+                        <li class="list-copy">
+                            <a href="#" class="link-card">For designers</a>
+                        </li>
+                        <li class="list-copy">
+                            <a href="#" class="link-card">Integrations</a>
+                        </li>
+                        <li class="list-copy">
+                            <a href="#" class="link-card">Security</a>
+                        </li>
+                        <li class="list-copy">
+                            <a href="#" class="link-card">Pricing</a>
+                        </li>
+                        <li class="list-copy">
+                            <a href="#" class="link-card">Automations</a>
+                        </li>
+                    </ul>
+                </div>
+                <div class="wrap-copyright">
+                    <h3 class="link-card-title">Support</h3>
+                    <ul class="list-copyright">
+                        <li class="list-copy">
+                            <a href="#" class="link-card">Contact</a>
+                        </li>
+                        <li class="list-copy">
+                            <a href="#" class="link-card">Documentation</a>
+                        </li>
+                        <li class="list-copy">
+                            <a href="#" class="link-card">Status</a>
+                        </li>
+                        <li class="list-copy">
+                            <a href="#" class="link-card">Product Updates</a>
+                        </li>
+                        <li class="list-copy">
+                            <a href="#" class="link-card">CLI Tool</a>
+                        </li>
+                        <li class="list-copy">
+                            <a href="#" class="link-card">API Reference</a>
+                        </li>
+                        <li class="list-copy">
+                            <a href="#" class="link-card">iOS and Android SDK</a>
+                        </li>
+                        <li class="list-copy">
+                            <a href="#" class="link-card">Supported File Formats</a>
+                        </li>
+                    </ul>
+                </div>
+                <div class="wrap-copyright">
+                    <h3 class="link-card-title">Company</h3>
+                    <ul class="list-copyright">
+                        <li class="list-copy">
+                            <a href="#" class="link-card">About</a>
+                        </li>
+                        <li class="list-copy">
+                            <a href="#" class="link-card">Blog</a>
+                        </li>
+                        <li class="list-copy">
+                            <a href="#" class="link-card">Careers | We`re Hiring</a>
+                        </li>
+                        <li class="list-copy">
+                            <a href="#" class="link-card">Case Studies</a>
+                        </li>
+                        <li class="list-copy">
+                            <a href="#" class="link-card">Media Kit</a>
+                        </li>
+                    </ul>
+                </div>
+                <div class="wrap-copyright">
+                    <h3 class="link-card-title">Legal</h3>
+                    <ul class="list-copyright">
+                        <li class="list-copy">
+                            <a href="#" class="link-card">Terms of Service</a>
+                        </li>
+                        <li class="list-copy">
+                            <a href="#" class="link-card">Privacy Policy</a>
+                        </li>
+                        <li class="list-copy">
+                            <a href="#" class="link-card">Cookie Policy</a>
+                        </li>
+                        <li class="list-copy">
+                            <a href="#" class="link-card">Privacy Shield</a>
+                        </li>
+                        <li class="list-copy">
+                            <a href="#" class="link-card">DPA</a>
+                        </li>
+                        <li class="list-copy">
+                            <a href="#" class="link-card">List of Sub-processors</a>
+                        </li>
+                        <li class="list-copy">
+                            <a href="#" class="link-card box">Candidates Privacy Notice</a>
+                        </li>
+                    </ul>
+                </div>
             </div>
             <img src="./images/stick.png" class="row">
         </div>
