--- a/index.html
+++ b/index.html
@@ -92,7 +92,7 @@
         </div>
     </aside>
 
-    <!--<main class="main">
+    <main class="main">
         <div class="container">
             <div class="wrapper">
                 <div class="wrapper-first">
@@ -138,7 +138,7 @@
                 <img src="./images/developers.png" class="title-pic-left last">
             </div>
         </div>
-        <section class="color">
+        <!--<section class="color">
             <div class="container">
                 <h6 class="tagline"> What can you localize with Lokalise?</h6>
                 <div class="wrap-item">
