--- a/index.html
+++ b/index.html
@@ -138,7 +138,7 @@
                 <img src="./images/developers.png" class="title-pic-left last">
             </div>
         </div>
-        <!--<section class="color">
+        <section class="color">
             <div class="container">
                 <h6 class="tagline"> What can you localize with Lokalise?</h6>
                 <div class="wrap-item">
@@ -266,7 +266,7 @@
             </div>
         </div>
     </section>
-    <section class="info-col">
+    <!-- <section class="info-col">
         <div class="col">
             <div class="container">
                 <div class="holder">
