--- a/index.html
+++ b/index.html
@@ -266,7 +266,7 @@
             </div>
         </div>
     </section>
-    <!-- <section class="info-col">
+    <section class="info-col">
         <div class="col">
             <div class="container">
                 <div class="holder">
@@ -411,7 +411,7 @@
                 </div>
             </div>
         </div>
-    </footer>-->
+    </footer>
 </body>
 
 </html>
